<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.artemnefedov</groupId>
    <artifactId>javaai</artifactId>
    <version>0.4.1</version>
    <packaging>jar</packaging>

    <name>JavaAI</name>
    <description>JavaAI is an open-source Java library for interacting with the OpenAI API</description>
    <url>https://github.com/artemnefedov/JavaAI</url>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/artemnefedov/JavaAI/blob/main/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Artyom Nefedov</name>
            <url>https://github.com/artemnefedov</url>
            <email>artemnefedov@duck.com</email>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/artemnefedov/JavaAI/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git://github.com/artemnefedov/JavaAI.git</connection>
        <developerConnection>scm:git:ssh://github.com:artemnefedov/JavaAI.git</developerConnection>
        <url>https://github.com/artemnefedov/JavaAI/tree/main</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <json.version>20240303</json.version>
        <mockito.junit.jupiter.version>5.12.0</mockito.junit.jupiter.version>
        <jacoco.maven.plugin.version>0.8.12</jacoco.maven.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
